--- a/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/timer/styles/TimeDash.module.css
@@ -15,7 +15,7 @@
     font-size: var(--font-size-lg);
     font-weight: var(--font-weight-bold);
     text-transform: uppercase;
-    color: var(--color-text-inactive);
+    color: var(--panel-text);
     margin-bottom: var(--spacing-4);
     letter-spacing: var(--letter-spacing-wide);
     font-family: var(--font-family-active);
@@ -91,7 +91,7 @@
 
 .timeUnit {
     font-size: var(--font-size-sm);
-    color: var(--color-text-inactive);
+    color: var(--panel-text);
     text-transform: uppercase;
     letter-spacing: var(--letter-spacing-wide);
     font-family: var(--font-family-active);
